feat: added external jws support
