# src/api/swagger.yaml
@@ -802,6 +802,37 @@ paths:
         - mta
         - pta
       x-swagger-router-controller: JWSCerts
+  /external-dfsps/jwscerts:
+    post:
+      tags:
+      - External-DFSPs-JWS-certificates-configuration
+      summary: post external JWS certificates
+      description: TBD
+      operationId: createDfspExternalJWSCerts
+      requestBody:
+        description: TBD
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/DFSPJWSCertInput'
+        required: true
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/DFSPJWSCert'
+      security:
+      - OAuth2:
+        - mta
+        - pta
+      x-swagger-router-controller: JWSCerts
+      x-codegen-request-body-name: body
   /dfsps:
     get:
       tags:
@@ -2658,6 +2689,14 @@ components:
       description: The JWS certificate with the dfpsId.
       allOf:
       - $ref: '#/components/schemas/JWSCert'
+      - type: object
+        properties:
+          dfspId:
+            type: string
+    DFSPJWSCertInput:
+      description: The BaseJWSCert certificate with the dfpsId.
+      allOf:
+      - $ref: '#/components/schemas/BaseJWSCert'
       - type: object
         properties:
           dfspId:
